Updated files with new changes

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-GEMINI_API_KEY=AIzaSyCWDMnoQBqfwZWz4hh2tlGm4usXakp5-IM
+GEMINI_API_KEY=AIzaSyBcN6ciNKggIy4ypAgKJjukrEy8AAG1vCE
+
+# Set to true to use mock data when API quota is exceeded or for testing
+USE_MOCK_DATA=true
 
