--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ python-dotenv>=1.0.0
 google-generativeai>=0.3.2
 sentence-transformers>=2.2.2
 faiss-cpu>=1.7.4
+langchain>=0.1.0
+langchain-google-genai>=0.0.6
+langchain-community>=0.0.13
+langchain-core>=0.1.18
 
 # Web API
 fastapi>=0.104.1
